# progcrypto_workshop

./: .env.example  .gitignore  Cargo.toml  README.md  start_notary.sh  start_simple_notary.sh  workshop.md
discord/: Cargo.toml
discord/src/examples/: discord_dm.rs
notary/: Cargo.toml
notary/config/: config.yaml
notary/src/: main.rs
simple/: Cargo.toml
simple/src/examples/: simple_prover.rs  simple_verifier.rs
src/: proof.json  simple_notary.rs  simple_verifier.rs
